[package]
edition = "2024"
name = "basic-oop"
version = "0.5.1"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Simple OOP for Rust."
readme = "README.md"
documentation = "https://docs.rs/basic-oop/"
keywords = ["virtual", "oop", "arc", "inheritance", "object"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/basic-oop"

[workspace]
members = [
    "macro",
]

[dependencies]
basic-oop-macro = { path = "macro", version = "0.5.1" }
dynamic-cast = "0.1.5"
macro_magic = "0.6.0"
