[package]
edition = "2024"
name = "basic-oop-macro"
version = "0.0.1"
rust-version = "1.87"
authors = ["warlock <internalmike@gmail.com>"]
description = "Procedural macro library for basic-oop."
documentation = "https://docs.rs/basic-oop-macro/"
keywords = ["virtual", "oop", "arc", "inheritance", "object"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/basic-oop"

[dependencies]
