[package]
edition = "2024"
name = "basic-oop-macro"
version = "0.3.0"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Procedural macro library for basic-oop."
documentation = "https://docs.rs/basic-oop-macro/"
keywords = ["virtual", "oop", "arc", "inheritance", "object"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/basic-oop"

[lib]
proc-macro = true

[dependencies]
anycase = "0.1.0"
macro_magic = { version = "0.6.0", features = ["proc_support"] }
proc-macro2 = "1.0.95"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
